Cleaned code and added comments

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -1,19 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Edouard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Import"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import torchvision.transforms as transforms\n",
     "import torchvision.datasets as dset\n",
@@ -31,12 +30,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Init Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds,val_ds=generate_datasets('./db_train.raw','./label_train.txt',0.7)"
+    "PATH_RESULTS=\"\"\n",
+    "CHECKPOINT_PATH=\"\""
    ]
   },
   {
@@ -45,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "train_ds,val_ds=generate_datasets('./db_train.raw','./label_train.txt',0.7)\n",
     "dataloader_t = torch.utils.data.DataLoader(train_ds,batch_size=32,shuffle=True,drop_last=False)\n",
     "dataloader_v = torch.utils.data.DataLoader(val_ds,batch_size=32,shuffle=True,drop_last=False)"
    ]
@@ -59,19 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device= torch.device(\"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "device= torch.device(\"cpu\")\n",
     "facenet=FaceNet(0.2,0.7,True).to(device)"
    ]
   },
@@ -82,11 +83,15 @@
    "outputs": [],
    "source": [
     "optimizer = optim.Adam(facenet.parameters(), lr=3e-4, betas=(0.9, 0.999))\n",
-    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=4, gamma=0.5,verbose=True)\n",
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5,verbose=True)\n",
     "alpha1=0.2\n",
     "alpha2=0.2\n",
-    "num_epochs=20\n",
-    "threshold=0.5"
+    "num_epochs=30\n",
+    "threshold=0.5\n",
+    "if CHECKPOINT_PATH=!\"\":\n",
+    "    checkpoint=torch.load(CHECKPOINT_PATH)\n",
+    "else:\n",
+    "    checkpoint=None"
    ]
   },
   {
@@ -95,7 +100,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training(num_epochs,facenet,optimizer,scheduler,dataloader_t,dataloader_v,device,alpha1,alpha2,threshold,\"/content/results/\")"
+    "training(num_epochs,facenet,optimizer,scheduler,dataloader_t,dataloader_v,device,alpha1,alpha2,threshold,PATH_RESULTS,checkpoint)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_ds=generate_datasets_test(path_images,path_label)\n",
+    "dataloader_test = torch.utils.data.DataLoader(test_ds,batch_size=32,shuffle=True,drop_last=False) #Dataloader train set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device= torch.device(\"cuda:0\")\n",
+    "checkpoint=torch.load(\"\")\n",
+    "facenet=create_test_model(0.2,0.7,device,checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold=0.5\n",
+    "tp,tn,fp,fn=0,0,0,0\n",
+    "for i, dataj in enumerate(dataloader_test, 0): #Evaluation on validation set\n",
+    "    x=dataj[0].float().to(device)\n",
+    "    gt=dataj[1].float().to(device)\n",
+    "    y=facenet(x).view(-1)\n",
+    "    pred=y>threshold\n",
+    "    tp+=torch.sum(((pred)==gt)[torch.where((gt)==1)]).item()#TP\n",
+    "    fn+=torch.sum(((pred)!=gt)[torch.where((gt)==1)]).item()#FN\n",
+    "    tn+=torch.sum(((pred)==gt)[torch.where((gt)==0)]).item()#TN\n",
+    "    fp+=torch.sum(((pred)!=gt)[torch.where((gt)==0)]).item()#FP\n",
+    "far=fp/(tn+fp)\n",
+    "frr=fn/(tp+fn)\n",
+    "hter=0.5*(far+frr)\n",
+    "print(\"Hter : {} \\n\".format(hter))"
    ]
   }
  ],
