--- a/Training_colab.ipynb
+++ b/Training_colab.ipynb
@@ -69,14 +69,22 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Init Data"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_ds,val_ds=generate_datasets('./db_train.raw','./label_train.txt',0.7)\n",
-        "dataloader_t = torch.utils.data.DataLoader(train_ds,batch_size=32,shuffle=True,drop_last=False)\n",
-        "dataloader_v = torch.utils.data.DataLoader(val_ds,batch_size=32,shuffle=True,drop_last=False)"
+        "train_ds,val_ds=generate_datasets('./db_train.raw','./label_train.txt',0.7) #Generate Dataset from data, label and dividing the data according to a ratio\n",
+        "dataloader_t = torch.utils.data.DataLoader(train_ds,batch_size=32,shuffle=True,drop_last=False) #Dataloader train set\n",
+        "dataloader_v = torch.utils.data.DataLoader(val_ds,batch_size=32,shuffle=True,drop_last=False) #Dataloader validation set"
       ]
     },
     {
@@ -90,24 +98,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "id": "zCsZwuhUjKFL"
-      },
-      "outputs": [],
-      "source": [
-        "device= torch.device(\"cuda:0\")"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 15,
       "metadata": {
         "id": "eMeBTTFEZIp1"
       },
       "outputs": [],
       "source": [
-        "facenet=FaceNet(0.2,0.7,True).to(device)"
+        "device= torch.device(\"cuda:0\")\n",
+        "facenet=FaceNet(0.2,0.7,True).to(device) #Creates the model"
       ]
     },
     {
@@ -118,10 +116,10 @@
       },
       "outputs": [],
       "source": [
-        "optimizer = optim.Adam(facenet.parameters(), lr=3e-4, betas=(0.9, 0.999))\n",
-        "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.3,verbose=True)\n",
-        "alpha1=0.2\n",
-        "alpha2=0.2\n",
+        "optimizer = optim.Adam(facenet.parameters(), lr=3e-4, betas=(0.9, 0.999)) #Adam Optimizer \n",
+        "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.3,verbose=True) #Learning rate scheduler\n",
+        "alpha1=0.2 #weight of the loss of the first intermediate output of the net used\n",
+        "alpha2=0.2 #weight of the loss of the second intermediate output of the net used\n",
         "num_epochs=26\n",
         "threshold=0.5"
       ]
@@ -150,7 +148,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Data visu & function"
+        "# Test"
       ]
     },
     {
@@ -159,138 +157,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "class dataset(Dataset):\n",
-        "    def __init__(self, data_0, data_1):\n",
-        "        self.samples = []\n",
-        "        self.transform=transforms.Compose([  transforms.RandomHorizontalFlip(p=0.5),\n",
-        "                                transforms.RandomAffine(20,(0.12,0.12),(0.8,1.2),interpolation=transforms.InterpolationMode.NEAREST,fill=0),\n",
-        "                                transforms.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
-        "                                ])\n",
-        "        for img in data_0:\n",
-        "            img=transforms.ToTensor()(img)\n",
-        "            self.samples.append((img,0))\n",
-        "        for img in data_1:\n",
-        "            img=transforms.ToTensor()(img)\n",
-        "            self.samples.append((img,1))\n",
-        "\n",
-        "    def __len__(self):\n",
-        "        return len(self.samples)\n",
-        "\n",
-        "    def __getitem__(self, id):\n",
-        "        (img,label)=self.samples[id]\n",
-        "        img=self.transform(img)\n",
-        "        return (img,label)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {
-        "id": "EDDhqOBoZIp5"
-      },
-      "outputs": [],
-      "source": [
-        "def lossfunction(x,y):\n",
-        "    num_0=torch.where(y==0)[0].shape[0]\n",
-        "    num_1=x.shape[0]-num_0\n",
-        "    w0=0.\n",
-        "    w1=0.\n",
-        "    if num_0!=0:\n",
-        "        w0=torch.divide(x.shape[0],(2*num_0),).float()\n",
-        "    if num_1!=0:\n",
-        "        w1=torch.divide(x.shape[0],(2*num_1),).float()\n",
-        "    w=torch.ones_like(x).float()\n",
-        "    w[torch.where(y==0)[0]]=w0\n",
-        "    w[torch.where(y==1)[0]]=w1\n",
-        "    return torch.nn.BCELoss(w)(x.float(),y.float())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 27,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "m8aDv9K8ZIp6",
-        "outputId": "391c3a22-66a8-4407-97a7-459e86cdadf6"
-      },
-      "outputs": [],
-      "source": [
-        "def training(num_epochs,facenet,optimizer,scheduler,dataloader_t,dataloader_v,device,alpha1,alpha2,threshold,path):\n",
-        "\n",
-        "    Loss_train_train=[]\n",
-        "    Loss_train_eval=[]\n",
-        "    Loss_val_eval=[]\n",
-        "    for epoch in tqdm.tqdm(range(num_epochs)):\n",
-        "        L_t_t=[]\n",
-        "        L_t_e=[]\n",
-        "        L_v_e=[]\n",
-        "        tp_t,fn_t,tn_t,fp_t=0,0,0,0\n",
-        "        tp_v,fn_v,tn_v,fp_v=0,0,0,0\n",
-        "\n",
-        "        facenet.train()\n",
-        "        for i, dataj in (enumerate(dataloader_t, 0)):\n",
-        "            facenet.zero_grad()\n",
-        "            x=dataj[0].float().to(device)\n",
-        "            gt=dataj[1].float().to(device)\n",
-        "            y,aux1,aux2=facenet(x)\n",
-        "            loss=lossfunction(y.view(-1),gt)\n",
-        "            loss_aux1=lossfunction(aux1.view(-1),gt)\n",
-        "            loss_aux2=lossfunction(aux2.view(-1),gt)\n",
-        "            total_loss=(loss+alpha1*loss_aux1+alpha2*loss_aux2)/(1+alpha1+alpha2)\n",
-        "            total_loss.backward()\n",
-        "            optimizer.step()\n",
-        "            L_t_t.append([loss.item(),loss_aux1.item(),loss_aux2.item(),total_loss.item()])\n",
-        "            \n",
-        "        facenet.eval()\n",
-        "        for i, dataj in enumerate(dataloader_t, 0):\n",
-        "            x=dataj[0].float().to(device)\n",
-        "            yh=dataj[1].float().to(device)\n",
-        "            y=facenet(x).view(-1)\n",
-        "            loss=lossfunction(y,gt)\n",
-        "            L_t_e.append(loss.item())\n",
-        "            pred=y>threshold\n",
-        "            gt=yh\n",
-        "            tp_t+=torch.sum(((y>0.5)==gt)[torch.where((gt)==1)]).item()#TP\n",
-        "            fn_t+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==1)]).item()#FN\n",
-        "            tn_t+=torch.sum(((y>0.5)==gt)[torch.where((gt)==0)]).item()#TN\n",
-        "            fp_t+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==0)]).item()#FP\n",
-        "        for i, dataj in enumerate(dataloader_v, 0):\n",
-        "            x=dataj[0].float().to(device)\n",
-        "            gt=dataj[1].float().to(device)\n",
-        "            y=facenet(x).view(-1)\n",
-        "            loss=lossfunction(y,gt)\n",
-        "            L_v_e.append(loss.item())\n",
-        "            pred=y>threshold\n",
-        "            tp_v+=torch.sum(((y>0.5)==gt)[torch.where((gt)==1)]).item()#TP\n",
-        "            fn_v+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==1)]).item()#FN\n",
-        "            tn_v+=torch.sum(((y>0.5)==gt)[torch.where((gt)==0)]).item()#TN\n",
-        "            fp_v+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==0)]).item()#FP\n",
-        "        far_v=fp_v/(tn_v+fp_v)\n",
-        "        frr_v=fn_v/(tp_v+fn_v)\n",
-        "        far_t=fp_t/(tn_t+fp_t)\n",
-        "        frr_t=fn_t/(tp_t+fn_t)\n",
-        "        hter_t=0.5*(far_t+frr_t)\n",
-        "        hter_v=0.5*(far_v+frr_v)\n",
-        "        scheduler.step()\n",
-        "        err_t_t=np.mean(L_t_t,0)\n",
-        "        err_t_e=np.mean(L_t_e,0)\n",
-        "        err_v_e=np.mean(L_v_e,0)\n",
-        "        Loss_train_train.append(err_t_t)\n",
-        "        Loss_train_eval.append(err_t_e)\n",
-        "        Loss_val_eval.append(err_v_e)\n",
-        "        print(\"Training : Loss {} ||| Hter {} \\t Validation : Loss {} ||| Hter {}\".format(err_t_e,hter_t,err_v_e,hter_v))\n",
-        "        torch.save({\n",
-        "            'epoch': epoch,\n",
-        "            'model_state_dict': facenet.state_dict(),\n",
-        "            'optimizer_state_dict': optimizer.state_dict(),\n",
-        "            'loss_train_train': Loss_train_train,\n",
-        "            'loss_train_eval': Loss_train_eval,\n",
-        "            'loss_val_eval':Loss_val_eval,\n",
-        "            'metrics_train':{'tp':tp_t,'fn':fn_t,'fp':fp_t,'tn':tn_t,'far':far_t,'frr':frr_t,'hter':hter_t},\n",
-        "            'metrics_val':{'tp':tp_v,'fn':fn_v,'fp':fp_v,'tn':tn_v,'far':far_v,'frr':frr_v,'hter':hter_v}\n",
-        "            }, path+\"checkpoint_{}.pth\".format(epoch))"
+        "test_ds=generate_datasets_test(path_images,path_label)\n",
+        "dataloader_test = torch.utils.data.DataLoader(test_ds,batch_size=32,shuffle=True,drop_last=False) #Dataloader train set"
       ]
     },
     {
@@ -299,131 +167,32 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n",
+        "device= torch.device(\"cuda:0\")\n",
+        "checkpoint=torch.load(\"\")\n",
+        "facenet=create_test_model(0.2,0.7,device,checkpoint)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "threshold=0.5\n",
-        "facenet.eval()\n",
-        "tp,fn,tn,fp=0,0,0,0\n",
-        "for dataj in enumerate(dataloader_t):\n",
+        "tp,tn,fp,fn=0,0,0,0\n",
+        "for i, dataj in enumerate(dataloader_test, 0): #Evaluation on validation set\n",
         "    x=dataj[0].float().to(device)\n",
-        "    yh=dataj[1].float().to(device)\n",
+        "    gt=dataj[1].float().to(device)\n",
         "    y=facenet(x).view(-1)\n",
         "    pred=y>threshold\n",
-        "    gt=yh\n",
-        "    tp+=torch.sum(((y>0.5)==gt)[torch.where((gt)==1)]).item()#TP\n",
-        "    fn+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==1)]).item()#FN\n",
-        "    tn+=torch.sum(((y>0.5)==gt)[torch.where((gt)==0)]).item()#TN\n",
-        "    fp+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==0)]).item()#FP\n",
-        "far_t=fp/(tn+fp)\n",
-        "frr_t=fn/(tp+fn)\n",
-        "tp,fn,tn,fp=0,0,0,0\n",
-        "for dataj in enumerate(dataloader_v):\n",
-        "    x=dataj[0].float().to(device)\n",
-        "    yh=dataj[1].float().to(device)\n",
-        "    y=facenet(x).view(-1)\n",
-        "    pred=y>threshold\n",
-        "    gt=yh\n",
-        "    tp+=torch.sum(((y>0.5)==gt)[torch.where((gt)==1)]).item()#TP\n",
-        "    fn+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==1)]).item()#FN\n",
-        "    tn+=torch.sum(((y>0.5)==gt)[torch.where((gt)==0)]).item()#TN\n",
-        "    fp+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==0)]).item()#FP\n",
-        "far_v=fp/(tn+fp)\n",
-        "frr_v=fn/(tp+fn)\n",
-        "\n",
-        "hter_t=0.5*(far_t+frr_t)\n",
-        "hter_v=0.5*(far_v+frr_v)\n",
-        "print(hter_t,hter_v)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "facenet.eval()\n",
-        "tp=[]\n",
-        "fp=[]\n",
-        "tn=[]\n",
-        "fn=[]\n",
-        "threshold=0.5\n",
-        "for i, dataj in enumerate(dataloader_v, 0):\n",
-        "    x=dataj[0].float().to(device)\n",
-        "    yh=dataj[1].float().to(device)\n",
-        "    y=facenet(x).view(-1)\n",
-        "    pred=y>threshold\n",
-        "    gt=yh\n",
-        "    x_fn=x[torch.where(( (y>0.5)!=gt) & (gt==1))]\n",
-        "    x_fp=x[torch.where(( (y>0.5)!=gt) & (gt==0))]\n",
-        "    x_tp=x[torch.where(( (y>0.5)==gt) & (gt==1))]\n",
-        "    x_tn=x[torch.where(( (y>0.5)==gt) & (gt==0))]\n",
-        "    if x_fn.shape[0]!=0:\n",
-        "      fn.append(x_fn.cpu().numpy())\n",
-        "    if x_fp.shape[0]!=0:\n",
-        "      fp.append(x_fp.cpu().numpy())\n",
-        "    if x_tp.shape[0]!=0:\n",
-        "      tp.append(x_tp.cpu().numpy())\n",
-        "    if x_tn.shape[0]!=0:\n",
-        "      tn.append(x_tn.cpu().numpy())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "nb_tp=0\n",
-        "nb_tn=0\n",
-        "nb_fp=0\n",
-        "nb_fn=0\n",
-        "for elem in tp:\n",
-        "  nb_tp+=elem.shape[0]\n",
-        "for elem in tn:\n",
-        "  nb_tn+=elem.shape[0]\n",
-        "for elem in fp:\n",
-        "  nb_fp+=elem.shape[0]\n",
-        "for elem in fn:\n",
-        "  nb_fn+=elem.shape[0]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "far=nb_fp/(nb_fp+nb_tn)\n",
-        "frr=nb_fn/(nb_tp+nb_fn)\n",
+        "    tp+=torch.sum(((pred)==gt)[torch.where((gt)==1)]).item()#TP\n",
+        "    fn+=torch.sum(((pred)!=gt)[torch.where((gt)==1)]).item()#FN\n",
+        "    tn+=torch.sum(((pred)==gt)[torch.where((gt)==0)]).item()#TN\n",
+        "    fp+=torch.sum(((pred)!=gt)[torch.where((gt)==0)]).item()#FP\n",
+        "far=fp/(tn+fp)\n",
+        "frr=fn/(tp+fn)\n",
         "hter=0.5*(far+frr)\n",
-        "print(far, frr, hter)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "transform_to_img=transforms.Compose([   transforms.Normalize([0,0,0],[2,2,2]),\n",
-        "                                        transforms.Normalize([-0.5,-0.5,-0.5],[1,1,1]), \n",
-        "                                        transforms.ConvertImageDtype(torch.uint8)\n",
-        "                                    ])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "for elem in tn[20:40]:\n",
-        "    img=elem[0]\n",
-        "    img=transform_to_img(torch.tensor(img))\n",
-        "    img=torch.transpose(img,0,1)\n",
-        "    img=torch.transpose(img,1,2)\n",
-        "    img=img.numpy()\n",
-        "    plt.imshow(img)\n",
-        "    plt.show()"
+        "print(\"Hter : {} \\n\".format(hter))"
       ]
     }
   ],
