--- a/Training_colab.ipynb
+++ b/Training_colab.ipynb
@@ -157,6 +157,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "\"\"\" This cell can generate a dataset from data path & label path\"\"\"\n",
+        "\n",
         "test_ds=generate_datasets_test(path_images,path_label)\n",
         "dataloader_test = torch.utils.data.DataLoader(test_ds,batch_size=32,shuffle=True,drop_last=False) #Dataloader train set"
       ]
@@ -167,6 +169,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "\"\"\" This cell creates the model for testing and initialize the model with a defined checkpoint (weights of the model)\"\"\"\n",
         "device= torch.device(\"cuda:0\")\n",
         "checkpoint=torch.load(\"\")\n",
         "facenet=create_test_model(0.2,0.7,device,checkpoint)"
@@ -178,6 +181,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "\"\"\" Compute the prediction on the dataloader on test set and compute the Hter score of the set\"\"\"\n",
         "threshold=0.5\n",
         "tp,tn,fp,fn=0,0,0,0\n",
         "for i, dataj in enumerate(dataloader_test, 0): #Evaluation on validation set\n",
@@ -193,6 +197,82 @@
         "frr=fn/(tp+fn)\n",
         "hter=0.5*(far+frr)\n",
         "print(\"Hter : {} \\n\".format(hter))"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Test Prediction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "with open('/content/db_val.raw', 'rb') as f: #Loading Test images\n",
+        "    data = np.fromfile(f, dtype=np.dtype(np.uint8))\n",
+        "    data = data.reshape((-1,56, 56, 3))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "device= torch.device(\"cuda:0\")\n",
+        "checkpoint=torch.load(\"/content/final.pth\")\n",
+        "facenet=create_test_model(0.2,0.7,device,checkpoint) #Create the model with the weights of the epoch 18 (best epoch for validation value)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "\"\"\" Making Prediction on the data\"\"\"\n",
+        "\n",
+        "threshold=0.5\n",
+        "output=[] #Raw output of the network\n",
+        "prediction=[] #0 or 1 depending if the output of the network is >1 or <1\n",
+        "for img in tqdm.tqdm(data):\n",
+        "    x=transforms.ToTensor()(img).unsqueeze(0).float().to(device)\n",
+        "    y=facenet(x).view(-1)\n",
+        "    pred=y>threshold\n",
+        "    output.append(y.item())\n",
+        "    prediction.append(pred.item())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "with open('/content/test_net_output.txt','w') as f: #Writing rawoutput in a txt file\n",
+        "    for y in output:\n",
+        "        f.write(\"{}\\n\".format(y))\n",
+        "    print('Done')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "with open('/content/test_labeled.txt','w') as f: #Writing predicted label of the data in a txt file\n",
+        "    for y in prediction:\n",
+        "        if y==True:\n",
+        "          f.write(\"1\\n\")\n",
+        "        else:\n",
+        "          f.write(\"0\\n\")\n",
+        "    print('Done')"
       ]
     }
   ],
